Class name update

--- a/src/theme/app/_app.scss
+++ b/src/theme/app/_app.scss
@@ -1,4 +1,4 @@
-#app-mount .bg-1QIAus {
+#app-mount .bg__12180 {
   background: var(--background-dark);
 }
 
@@ -7,7 +7,7 @@
   color: var(--accent-text);
 }
 
-#app-mount .info-3pQQBb .line-18uChy:first-child:before {
+#app-mount .info__755e1 .line__75801:first-child:before {
   content: "MinimalCord " var(--minimalcord-version);
   display: block;
 }
