--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,12 +1,12 @@
 #app-mount {
   .title-3qD0b-,
-  .container-ZMc96U {
+  .container__11d72 {
     background: var(--background);
   }
-  .children-3xh0VB:after {
+  .children__32014:after {
     content: none;
   }
-  .searchBar-jGtisZ {
+  .searchBar_e0c60b {
     background: var(--background-dark);
   }
 }
