--- a/src/theme/app/_tooltips.scss
+++ b/src/theme/app/_tooltips.scss
@@ -12,12 +12,11 @@
   .tooltipContent-Nejnvh {
     color: var(--text-focus);
     font-weight: var(--font-weight-bold);
-    .guildNameText-jBFbNC {
+    .guildNameText__16f3c {
       color: var(--text-focus);
     }
-    .muteText-13RgwP {
+    .muteText_dc1e9a {
       color: var(--text-normal);
     }
   }
-
 }
