--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,17 +1,17 @@
 #app-mount {
-  .chat-9g_3Xj {
+  .chat__52833 {
     background: var(--background);
-    .scrollerSpacer-3AqkT9 {
+    .scrollerSpacer__9cd32 {
       height: 25px;
     }
-    .content-18rAwf:before {
+    .content__1a4fe:before {
       content: none;
     }
   }
-  .chatContent-2O4SXb {
+  .chatContent__5dca8 {
     background: transparent;
   }
-  .operations-3q3u6E > a {
+  .operations__07224 > a {
     color: rgb(var(--accent), 1);
   }
 }
