--- a/src/theme/chat/_threads.scss
+++ b/src/theme/chat/_threads.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.container-3XgAHv {
+	.container_def45c {
 		background: var(--background);
 	}
-	.divider-AZrXIA {
+	.divider_ffec75 {
 		background: var(--background-light);
 	}
-	.container-3YcgdM {
+	.container__8ee50 {
 		background: transparent;
 		border: none;
 		padding-right: 8px;
 	}
-	.chat-25x62K::before {
+	.chat__4eed1::before {
 		content: none;
 	}
 }
