--- a/src/theme/inputs/_button.scss
+++ b/src/theme/inputs/_button.scss
@@ -1,6 +1,6 @@
 #app-mount {
   // Brand/Blurple buttons
-  .lookFilled-1H2Jvj.colorBrand-2M3O3N {
+  .lookFilled__19298.colorBrand_b2253e {
     background: rgb(var(--accent), 1);
     color: var(--accent-text);
     font-weight: 600;
@@ -21,7 +21,7 @@
   }
 
   // Panel buttons
-  .button-ejjZWC.buttonColor-3bP3fX {
+  .button_afdfd9.buttonColor_a6eb73 {
     background: var(--background-light);
     &:hover {
       background: rgb(var(--accent), 1);
