--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-  .container-2vWgD2,
-  .members-2y1nVj,
-  .members-2y1nVj > div {
+  .container_b2ce9c,
+  .members__9f47b,
+  .members__9f47b > div {
     background: transparent;
   }
 }
