--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.message-G6O-Wv {
+	.message__04d9f {
 		background: var(--background-alt);
 		box-shadow: none;
-		.cozy-VmLDNB {
+		.cozy_f5c119 {
 			margin: 0 !important;
 		}
 	}
