--- a/src/theme/modals/_modal.scss
+++ b/src/theme/modals/_modal.scss
@@ -1,16 +1,16 @@
 #app-mount {
   .modal-3O0aXp,
-  .root-1CAIjD {
+  .root_a28985 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
   }
-  .header-1ffhsl {
+  .header__6d5ea {
     box-shadow: none;
   }
   .content-18dVld {
     padding: 0 24px 24px 24px;
   }
-  .footer-IubaaS {
+  .footer__89240 {
     background: var(--background);
     box-shadow: none;
     padding: 24px;
