--- a/src/theme/modals/_quickswitcher.scss
+++ b/src/theme/modals/_quickswitcher.scss
@@ -1,11 +1,11 @@
 #app-mount {
-  .quickswitcher-pKcM9U {
+  .quickswitcher_a3d29a {
     background: var(--background);
   }
-  .scroller-2qwVWY {
+  .scroller__52ae7 {
     background: transparent;
   }
-  .input-3r5zZY {
+  .input__848cd {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     padding: 0 24px;
