--- a/src/theme/modals/_uploadfile.scss
+++ b/src/theme/modals/_uploadfile.scss
@@ -1,12 +1,12 @@
-#app-mount .uploadModal-2ie9O_ {
+#app-mount .uploadModal_eae2a0 {
 	background: var(--background);
 	border-radius: var(--border-radius);
 	box-shadow: var(--box-shadow);
-	.footer-VCsJQY {
+	.footer_ceda43 {
 		background: var(--background-alt);
 		box-shadow: none;
 	}
-	.slateTextArea-27tjG0 {
+	.slateTextArea__0661c {
 		padding-left: 15px;
 	}
 }
