--- a/src/theme/pages/_discovery.scss
+++ b/src/theme/pages/_discovery.scss
@@ -3,7 +3,7 @@
     background: rgb(var(--accent), 1);
   }
 
-  .pageWrapper-2PwDoS {
+  .pageWrapper_fef757 {
     background: var(--background);
     .input-2g-os5 {
       background: #fff;
@@ -11,7 +11,7 @@
     }
   }
 
-  .card-2TuZPZ {
+  .card__86773 {
     border-radius: var(--border-radius);
     background: var(--background-alt);
     foreignObject[mask="url(#svg-mask-squircle)"] {
@@ -20,12 +20,12 @@
     &:hover {
       background: var(--background-light-alt);
       box-shadow: var(--box-shadow);
-      .iconMask-2fMR98 {
+      .iconMask__1aff7 {
         background: var(--background-light-alt);
       }
     }
   }
-  .iconMask-2fMR98 {
+  .iconMask__1aff7 {
     border-radius: var(--border-radius);
     background: var(--background-alt);  
   }
