--- a/src/theme/pages/_friends.scss
+++ b/src/theme/pages/_friends.scss
@@ -1,15 +1,15 @@
 #app-mount {
-  .container-2cd8Mz {
+  .container__5c7e7 {
     background: var(--background);
-    .title-338goq {
+    .title__10613 {
       margin: 20px;
     }
   }
-  .tabBody-2dgbAs:before {
+  .tabBody_b3d268:before {
     content: none;
   }
 
-  .peopleListItem-u6dGxF {
+  .peopleListItem_d14722 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
@@ -18,53 +18,53 @@
     padding: 0 15px;
     &:hover {
       background: var(--background-light);
-      .actionButton-3-B2x- {
+      .actionButton__23182 {
         background: var(--background);
       }
     }
   }
-  .actionButton-3-B2x- {
+  .actionButton__23182 {
     background: var(--background-dark);
   }
 
 
 
-	.scroller-hE2gWq {
+	.scroller__00e7e {
 		border: none;
 		padding-left: 0;
 	}
-	.container-1oAagU {
+	.container__0a6a9 {
 		background: var(--background);
 	}
-  .nowPlayingColumn-1eCBCN {
+  .nowPlayingColumn_f5023f {
     background: transparent;
   }
-  .nowPlayingScroller-12BxFW {
+  .nowPlayingScroller_dce5c0 {
     padding: 20px;
   }
   .header-13Cw0- {
     padding: 0 0 20px 0;
   }
-  .emptyCard-KDifrB {
+  .emptyCard_f82dde {
     background: var(--background-alt);
     border-radius: var(--border-radius);
   }
 
-  .wrapper-2RrXDg {
+  .wrapper__6e669 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
 		border: none;
     &:hover {
       background: var(--background-light);
-      .inset-SbsSFp {
+      .inset__0bfb3 {
         background: var(--background-alt);
       }
     }
   }
-	.section-3G9aLW {
+	.section_efc22d {
 		background: var(--background-light);
 	}
-  .inset-SbsSFp {
+  .inset__0bfb3 {
     background: var(--background);
   }
 }
