--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.autocomplete-3NRXG8 {
+	.autocomplete_df266d {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader-OpJ1Ly {
+		.categoryHeader_f97a5f {
 			background: var(--background-light);
 		}
 	}
