--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .contentWrapper-3vHNP2 {
+  .contentWrapper__321ed {
     background: var(--background-light-alt);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .scroller-2MALzE::-webkit-scrollbar {
+  .scroller_e89578::-webkit-scrollbar {
     display: none;
   }
-  .container-1SX9VC {
+  .container_e4c233 {
     background: var(--background);
     border: 1px solid var(--background);
     transition: border-color .15s ease;
@@ -19,23 +19,23 @@
     }
   }
 
-  .wrapper-22rqw6 {
+  .wrapper__4f229 {
     background: var(--background);
   }
 
 
-  .list-3V14yy {
-    .listItems-6eZzQ1 {
+  .list__30719 {
+    .listItems__699d1 {
       left: 0 !important;
     }
     ul[role="row"] {
       padding-left: 8px;
     }
-		.wrapper-1NNaWG {
+		.wrapper__7a35f {
 			background: var(--background-light-alt);
 			padding-left: 12px;
 		}
-		.inspector-DFKXwB {
+		.inspector__993e1 {
 			background: var(--background-light);
 		}
   }
