--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .container-iA3Qrz {
+  .container__56e52 {
     margin: 20px 0;
   }
-  .channelHeader-DFRX8q {
+  .channelHeader__5d30c {
     background: var(--background-light-alt);
     padding: 16px;
   }
-  .messageContainer-3VTXBC {
+  .messageContainer_aa7d14 {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
     background: var(--background-alt);
   }
