--- a/src/theme/popouts/_search.scss
+++ b/src/theme/popouts/_search.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .container-2McqkF {
+  .container_d6dad3 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
-  .option-ayUoaq {
+  .option_b5597b {
     &:after {
       background: linear-gradient(90deg, transparent, var(--background-light));
     }
