--- a/src/theme/popouts/_threads.scss
+++ b/src/theme/popouts/_threads.scss
@@ -1,13 +1,13 @@
 #app-mount {
-	.container-18GwIk {
+	.container__8261a {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header-3_zmOb {
+	.header__53b07 {
 		background: var(--background-alt);
 	}
-	.container-2rzKKA {
+	.container__6604b {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		border: none;
