--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -1,16 +1,16 @@
 #app-mount {
-  .sidebar-3K3Z4C {
+  .sidebar_bdf6b7 {
     border: none;
   }
-  .titleContainer-3fPic2 {
+  .titleContainer_e558ff {
     background: var(--background);
     box-shadow: none;
   }
-  .header-JUTO-g {
+  .header__63c59 {
     background: var(--background);
     box-shadow: none;
   }
-  .scroller-3_YDR2 {
+  .scroller__52680 {
     background: transparent;
   }
 }
