--- a/src/theme/settings/user/_authapps.scss
+++ b/src/theme/settings/user/_authapps.scss
@@ -1,5 +1,5 @@
-#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
-  .authedApp-8q3NA9 {
+#app-mount .layer__2efaa :not(.baseLayer__8fda3) {
+  .authedApp__51b26 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
