--- a/src/theme/settings/user/_connections.scss
+++ b/src/theme/settings/user/_connections.scss
@@ -1,27 +1,27 @@
-#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
-  .connectContainer-1hylYM {
+#app-mount .layer__2efaa :not(.baseLayer__8fda3) {
+  .connectContainer__8050b {
     background: var(--background-light);
     margin-bottom: 55px;
   }
-  .accountButtonInner-33vCDY {
+  .accountButtonInner__80e3a {
     background-color: var(--background-light-alt);
     &:hover {
       background-color: var(--background);
     }
   }
 
-  .connection-YOVI9j {
+  .connection_fff5f6 {
     background: var(--background-alt);
   }
-  .connectionHeader-Ixbb1s {
+  .connectionHeader__3c82d {
     background: var(--background-light-alt);
   }
 
-  .metadataContainer-35U-On {
+  .metadataContainer__7b316 {
     background: var(--background);
     padding: 16px;
   }
-  .integration-1qC-fv {
+  .integration_d2f026 {
     background: var(--background-alt);
   }
 }
