--- a/src/theme/settings/user/_myaccount.scss
+++ b/src/theme/settings/user/_myaccount.scss
@@ -1,9 +1,9 @@
-#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
-  .accountProfileCard-lbN7n- {
-		background: var(--background-alt);
-	}
-	.background-3d_SjE,
-	.fieldList-in8WkP {
-		background: var(--background);
-	}
-}
+#app-mount .layer__2efaa :not(.baseLayer__8fda3) {
+	.accountProfileCard__22589 {
+		  background: var(--background-alt);
+	  }
+	  .background_b61fcc,
+	  .fieldList_aab0de {
+		  background: var(--background);
+	  }
+  }
