--- a/src/theme/settings/user/_voicevideo.scss
+++ b/src/theme/settings/user/_voicevideo.scss
@@ -1,5 +1,5 @@
 #app-mount [aria-label="GUILD_SETTINGS"] {
-  .children-1xdcWE > .flex-1xMQg5.flex-3BkGQD {
+  .children_b15c64 > .flex-1xMQg5.flex__909d4 {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     padding: 16px;
@@ -9,14 +9,14 @@
     border-radius: var(--border-radius);
     padding: 16px;
     margin-top: 20px;
-    .marginTop8-24uXGp {
+    .marginTop8__83d4b {
       margin-top: 0;
     }
   }
-  .container-3NTP7o {
+  .container__6d33c {
     width: 530px !important;
   }
-  .notches-2w7UZJ {
+  .notches__065e9 {
     background: none;
   }
 }
