--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,7 +1,6 @@
 #app-mount {
-  .container-1NXEtd,
-  .sidebar-1tnWFu {
+  .container__590e2,
+  .sidebar_ded4b5 {
     background: var(--background);
   }
 }
-
