--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.privateChannels-oVe7HL {
+	.privateChannels__93473 {
     background: transparent;
-		.scroller-WSmht3 {
+		.scroller__4b984 {
 			background: transparent;
 		}
   }
-  .channel-1Shao0 {
+  .channel_c21703 {
     margin-left: 0;
     border-radius: 0 4px 4px 0;
     padding: 0;
     margin-bottom: 3px;
-    .layout-1LjVue {
+    .layout__59abc {
       border-radius: 0 var(--border-radius) var(--border-radius) 0;
       padding-left: 16px;
     }
