--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -1,18 +1,18 @@
 #app-mount {
-  .selected-1GtAC5 .header-3OsQeK {
+  .selected__0b1ad .header__104ca {
     background: transparent;
   }
-  .header-3OsQeK {
+  .header__104ca {
     box-shadow: none;
     &:hover {
       background: transparent;
     }
   }
 
-  .searchBar-3TnChZ {
+  .searchBar_e4ea2a {
     box-shadow: none;
   }
-  .searchBarComponent-3N7dCG {
+  .searchBarComponent__22760 {
     background: var(--background-dark);
   }
 }
