--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .panels-3wFtMD {
+  .panels__58331 {
     background: var(--background);
   }
-  .activityPanel-9icbyU
-  .container-1CH86i {
+  .activityPanel__22355
+  .container_ca50b9 {
     background: transparent;
   }
-  .container-1CH86i,
-  .activityPanel-9icbyU {
+  .container_ca50b9,
+  .activityPanel__22355 {
     background: transparent;
     border: none;
   }
