--- a/src/theme/_dark.scss
+++ b/src/theme/_dark.scss
@@ -1,5 +1,5 @@
 .theme-dark,
-html.theme-dark #app-mount .theme-light .root-1CAIjD,
+html.theme-dark #app-mount .theme-light .root_a28985,
 html.theme-dark .force-theme.theme-light {
   --dark-bg-h: var(--dark-bg-hue, 218);
   --dark-bg-s: var(--dark-bg-saturation, 15%);
