--- a/src/theme/app/_font.scss
+++ b/src/theme/app/_font.scss
@@ -1,6 +1,5 @@
 ::-webkit-input-placeholder, body, button, input, select, textarea {
   font-family: var(--font, 'Roboto'), 'Whitney';
-}
-html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
+}html, span:not([class*=spinner_]):not([class*=spinnerItem]) {
   backface-visibility: hidden !important;
 }
