--- a/src/theme/chat/_bars.scss
+++ b/src/theme/chat/_bars.scss
@@ -1,5 +1,5 @@
 #app-mount {
-  .newMessagesBar-1hF-9G {
+  .newMessagesBar__8b6d7 {
     background: rgb(var(--accent), 1);
     border-radius: var(--border-radius);
     top: 10px;
@@ -10,7 +10,7 @@
       font-weight: 600;
     }
   }
-  .jumpToPresentBar-1cEnH0 {
+  .jumpToPresentBar__0ff7f {
     background: var(--background-light);
     opacity: 1;
     border-radius: var(--border-radius);
@@ -21,22 +21,22 @@
     .barButtonMain-3K-jeJ {
       display: none;
     }
-    .barButtonBase-Sk2mdB {
+    .barButtonBase__8fa46 {
       padding: 10px;
       height: auto;
       line-height: normal;
       color: var(--text-normal);
     }
-    .spinner-3xAPm0 {
+    .spinner__20584 {
       padding-left: 12px;
     }
   }
 
   // Reply to message
-  .attachedBars-2BCP3l {
+  .attachedBars_da3c74 {
     background: var(--background);
   }
-  .replyBar-1oi75v {
+  .replyBar_b64d74 {
     background: var(--background-light);
   }
 }
