--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,8 +1,8 @@
 #app-mount {
-  .expandedFolderBackground-1kSAf6 {
+  .expandedFolderBackground__1bec6 {
     background: var(--background-light);
   }
-  .folder-241Joy {
+  .folder__17546 {
     background: var(--background-light);
   }
 }
