--- a/src/theme/modals/_userprofile.scss
+++ b/src/theme/modals/_userprofile.scss
@@ -2,9 +2,9 @@
 
   // Global styles
   .size12-oc4dx4,
-  .activityName-3YXl6e,
-  .nameNormal-2fPMD2,
-  .nameWrap-3TyM52 {
+  .activityName__47e51,
+  .nameNormal__1d540,
+  .nameWrap__7263f {
     color: var(--text-normal);
   }
 
@@ -68,7 +68,7 @@
   }
 
 	&[style*="--user-background"] {
-		.banner-1YaD3N:not(.bannerPremium-kkSkPv) {
+		.banner__6d414:not(.bannerPremium__42693) {
 			height: 240px;
 			background: var(--user-background) center/cover;
 		}
