--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-  .messagesPopoutWrap-3zryHW {
+  .messagesPopoutWrap_b3b384 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .header-1w9Q93 {
+  .header_f5cc88 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
     z-index: 2;
   }
-  .messageGroupWrapper-1jf_7C {
+  .messageGroupWrapper_f8c6e9 {
     background: var(--background-alt);
     border: none;
   }
-  .messageGroupCozy-3v_RqN {
+  .messageGroupCozy__2dedd {
     margin: 0 !important;
     padding: 8px 8px 8px 0 !important;
   }
