--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -1,17 +1,17 @@
 #app-mount {
-  .wrapper-NhbLHG {
+  .wrapper__7bcde {
     height: auto;
     margin-bottom: 2px;
-    &.modeMuted-2T4MDZ .name-28HaxV {
+    &.modeMuted__0aeea .name__8d1ec {
       color: var(--text-muted);
     }
 
-    &.modeUnread-3Cxepe .icon-2W8DHg {
+    &.modeUnread_f74c03 .icon_eff5d4 {
       color: var(--text-focus);
     }
 
-    &.modeSelected-3DmyhH {
-      .icon-2W8DHg {
+    &.modeSelected__487d6 {
+      .icon_eff5d4 {
         color: var(--text-focus);
       }
       &:before {
@@ -25,25 +25,25 @@
       }
     }
 
-    &.typeThread-2Aqh6X .content-1gYQeQ {
+    &.typeThread__2f91c .wrapper__7bcde {
       padding-left: 42px;
     }
   }
-  .spine-29OFwR {
+  .spine__88e6d {
     z-index: 1;
   }
-  .content-1gYQeQ {
+  .wrapper__7bcde {
     margin-left: 0;
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
     padding-left: 16px;
   }
-  .unread-36eUEm {
+  .unread__48cf4 {
     z-index: 2;
   }
 
 
   // Voice
-  .avatarSpeaking-2pCGrZ {
+  .avatarSpeaking_c95053 {
     box-shadow: inset 0 0 0 2px rgb(var(--accent), 1), inset 0 0 0 3px var(--background);
   }
 }
