--- a/src/theme/sidebar/_unreadbar.scss
+++ b/src/theme/sidebar/_unreadbar.scss
@@ -1,4 +1,4 @@
-#app-mount .sidebar-1tnWFu .bar-2eAyLE {
+#app-mount .sidebar_ded4b5 .bar_edc096 {
   border-radius: var(--border-radius);
   background: var(--background-light);
   box-shadow: var(--box-shadow);
