--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -25,7 +25,7 @@
       }
     }
 
-    &.typeThread__2f91c .wrapper__7bcde {
+    &.typeThread__2f91c .link__95dc0 {
       padding-left: 42px;
     }
   }
@@ -35,6 +35,8 @@
   .wrapper__7bcde {
     margin-left: 0;
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
+  }
+  .link__95dc0 {
     padding-left: 16px;
   }
   .unread__48cf4 {
